--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,11 @@
     "config": "^3.3.8",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "joi": "^17.7.0",
+    "joi-password-complexity": "^5.1.0",
+    "lodash": "^4.17.21",
     "mongoose": "^6.8.2",
+    "morgan": "^1.10.0",
     "winston": "^3.8.2"
   }
 }
