--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "NODE_ENV=test jest --watchAll --verbose"
+    "test": "NODE_ENV=test jest --watchAll --verbose --coverage"
   },
   "keywords": [
     "e-commerce",
@@ -29,7 +29,18 @@
     "mongoose": "^6.8.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "regenerator-runtime": "^0.13.11",
     "slugify": "^1.6.5",
     "winston": "^3.8.2"
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.19.6",
+    "@babel/preset-env": "^7.20.2",
+    "babel-jest": "^29.3.1"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    }
   }
 }
