--- a/server/package.json
+++ b/server/package.json
@@ -36,11 +36,14 @@
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-env": "^7.20.2",
-    "babel-jest": "^29.3.1"
+    "@types/jest": "^29.2.6",
+    "babel-jest": "^29.3.1",
+    "supertest": "^6.3.3"
   },
   "jest": {
     "transform": {
       "^.+\\.jsx?$": "babel-jest"
-    }
+    },
+    "testEnvironment": "node"
   }
 }
