--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "mongoose": "^6.8.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "path": "^0.12.7",
     "regenerator-runtime": "^0.13.11",
     "slugify": "^1.6.5",
     "winston": "^3.8.2"
